--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </section>
 
   <section id="love-letter" class="love-letter">
-    <h2>From Me to You</h2>
+    <h2>A Love Letter</h2>
     <div class="text-image">
       <img src="image3.jpeg" alt="Love Letter">
       <p><b>My Dearest Love</b><br>
